--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "engines": {
     "node": "0.10.x",
     "npm": "1.3.x"
-    },
+  },
+  "devDependencies": {
+    "sqlite3": "~3.0.8"
+  },
   "dependencies": {
     "express": "~4.9.0",
     "body-parser": "~1.8.1",
@@ -17,6 +20,8 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
-    "express-partials": "~0.3.0"
+    "express-partials": "~0.3.0",
+    "sequelize": "~2.1.3",
+    "pg": "~4.4.0"
   }
 }
