--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "~0.8.5",
     "express-partials": "~0.3.0",
     "sequelize": "~2.1.3",
-    "pg": "9.4.4"
+    "pg": "9.4.4",
+    "pg-hstore": "~2.3.2"
   }
 }
